fix: add custom scrollbar styles for improved UI experience

--- a/src/renderer/globals.css
+++ b/src/renderer/globals.css
@@ -139,4 +139,18 @@
   .not-draggable {
     -webkit-app-region: node;
   }
+
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #262626;
+    border-radius: 9999px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background-color: #141414;
+  }
+
 }
